# portfolio

./: .gitignore  Cargo.toml  Dioxus.toml  package.json
assets/: main.css  tailwind.css
src/: assets.rs  main.rs
src/components/: hero.rs  hero_content.rs  mod.rs  navbar.rs
