[package]
name = "portfolio"
version = "0.1.0"
authors = ["lheintzmann1 <lheintzmann1@disroot.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
dioxus-free-icons = { version = "0.10.0", features = ["hero-icons-solid"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
